syntax = "proto3";

package orders;

option go_package = "/utils/orders"

service Order {
    rpc GetCartDetails (CartRequest) returns (CartResponse);
}

message CartItem {
    int64 id = 1;
    int64 cart_id = 2;
    int64 product_id = 3;
    int64 quantity = 4;
    float price = 5;
}

message CartResponse {
    int64 id = 1;
    int64 user_id = 2;
    string created_at = 3;
    string updated_at = 4;
    repeated Cartitem cartItems = 5;
}

message CartRequest {
    int64 user_id = 1;
}