syntax = "proto3";

package ecommerce;

option go_package = "/utils/user";

service User {
    rpc CheckSellerExists (CheckSellerExistsRequest) returns (CheckSellerExistsResponse);
    rpc GetUserDetails (GetUserDetailsRequest) returns (GetUserDetailsResponse);
}

message Seller {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string created_at = 4;
}

message CheckSellerExistsRequest {
    int64 id = 1;
}

message CheckSellerExistsResponse {
    bool valid = 1;
}

message GetUserDetailsRequest {
    int64 id = 1;
}

message GetUserDetailsResponse {
    string name = 1;
    string email = 2;
    string phone = 3;
    string address = 4;
}